# rust-postgres

./: Makefile.toml  docker-compose.yml
.github/workflows/: ci.yml
codegen/: Cargo.toml
docker/: sql_setup.sh
postgres/: Cargo.toml
postgres-derive/: Cargo.toml
postgres-derive-test/: Cargo.toml
postgres-derive-test/src/: composites.rs  domains.rs  enums.rs  transparent.rs
postgres-native-tls/: Cargo.toml
postgres-native-tls/src/: test.rs
postgres-openssl/: Cargo.toml
postgres-openssl/src/: test.rs
postgres-protocol/: Cargo.toml
postgres-protocol/src/authentication/: sasl.rs
postgres-protocol/src/message/: backend.rs
postgres-protocol/src/password/: mod.rs
postgres-protocol/src/types/: mod.rs
postgres-replication/: Cargo.toml
postgres-replication/src/: protocol.rs
postgres-replication/tests/: replication.rs
postgres-types/: Cargo.toml
postgres-types/src/: lib.rs
postgres/benches/: bench.rs
postgres/src/: copy_in_writer.rs  test.rs
tokio-postgres/: Cargo.toml
tokio-postgres/benches/: bench.rs
tokio-postgres/src/: config.rs  connect_socket.rs  copy_both.rs  copy_in.rs  copy_out.rs  simple_query.rs  transaction.rs
tokio-postgres/src/error/: mod.rs
tokio-postgres/tests/test/: copy_both.rs  main.rs  parse.rs  runtime.rs
tokio-postgres/tests/test/types/: chrono_04.rs  mod.rs
